data truncation error fixed

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -150,6 +150,11 @@ ul.nav.nav-tabs {
 	margin-bottom: 1rem;
 }
 
+span.personalSummary {
+	font-weight: bold;
+	color: #0D6BFF;
+}
+
 /*****************************************************************
  							 LOGIN
 *****************************************************************/
